Can now add pictures and delete picture of a product.
